<resources>
    <string name="app_name">News Feed</string>
    <string name="no_data_to_display">No Data to Display</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>


    <string name="settings_section_label">Section</string>
    <string name="settings_section_key" translatable="false">section</string>

    <string name="settings_author_label">Author</string>
    <string name="settings_author_key" translatable="false">author</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_recent_value</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>

    <!-- Label for order-by most viewed option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_viewed_label">Most Viewed</string>
    <string name="settings_order_by_most_viewed_value" translatable="false">true</string>
    <string name="order_by_relevance">relevance</string>

</resources>
