<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:inputType="textCapSentences"
        android:key="@string/settings_section_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_section_label" />

    <EditTextPreference
        android:inputType="textCapWords"
        android:key="@string/settings_author_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_author_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

</PreferenceScreen>